# simple_server

./: Cargo.toml  Dockerfile  readme.md
src/: main.rs
